// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js?ver=ee29dc7b598964baa294",
    194,
    Object {
      "fullhash": "ee29dc7b598964baa294",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.super-compressed.js.gz?ver=ee29dc7b598964baa294",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.super-compressed.js.gz?ver=ee29dc7b598964baa294",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.js?var=ee29dc7b598964baa294",
    16115,
    Object {
      "fullhash": "ee29dc7b598964baa294",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.super-compressed.js.gz?var=ee29dc7b598964baa294",
      },
      "size": 16115,
    },
  ],
  Array [
    "main.super-compressed.js.gz?var=ee29dc7b598964baa294",
    4004,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4004,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/js/async.async.js.super-compressed.gz?ver=beb1f4b74585606e8c20#hash",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "assets/js/async.async.js?ver=beb1f4b74585606e8c20#hash",
    194,
    Object {
      "fullhash": "beb1f4b74585606e8c20",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=beb1f4b74585606e8c20#hash",
      },
      "size": 194,
    },
  ],
  Array [
    "assets/js/main.js.super-compressed.gz?var=beb1f4b74585606e8c20#hash",
    4022,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4022,
    },
  ],
  Array [
    "assets/js/main.js?var=beb1f4b74585606e8c20#hash",
    16141,
    Object {
      "fullhash": "beb1f4b74585606e8c20",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=beb1f4b74585606e8c20#hash",
      },
      "size": 16141,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "async.async.js.gz?ver=7bb98a2a88f211f73cb5",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js?ver=7bb98a2a88f211f73cb5#hash",
    194,
    Object {
      "fullhash": "7bb98a2a88f211f73cb5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "async.async.js.gz?ver=7bb98a2a88f211f73cb5",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz?var=7bb98a2a88f211f73cb5",
    16120,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16120,
    },
  ],
  Array [
    "main.js?var=7bb98a2a88f211f73cb5#hash",
    16120,
    Object {
      "fullhash": "7bb98a2a88f211f73cb5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "main.js.gz?var=7bb98a2a88f211f73cb5",
      },
      "size": 16120,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz?ver=7bb98a2a88f211f73cb5",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=7bb98a2a88f211f73cb5#hash",
    194,
    Object {
      "fullhash": "7bb98a2a88f211f73cb5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz?ver=7bb98a2a88f211f73cb5",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz?var=7bb98a2a88f211f73cb5",
    4009,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4009,
    },
  ],
  Array [
    "main.js?var=7bb98a2a88f211f73cb5#hash",
    16120,
    Object {
      "fullhash": "7bb98a2a88f211f73cb5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz?var=7bb98a2a88f211f73cb5",
      },
      "size": 16120,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option show work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/scripts/async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "assets/scripts/async.async.js?ver=318d426574dd029d4b7f#hash",
    194,
    Object {
      "fullhash": "318d426574dd029d4b7f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "assets/scripts/main.js.gz",
    4024,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4024,
    },
  ],
  Array [
    "assets/scripts/main.js?var=318d426574dd029d4b7f#hash",
    16146,
    Object {
      "fullhash": "318d426574dd029d4b7f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16146,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `Array []`;

exports[`"filename" option show work: warnings 1`] = `Array []`;
